.gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warehouse
  labels:
    environment: base
    app: warehouse
