.gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-frontend
  labels:
    app: warehouse
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: warehouse
    component: frontend
